welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:57: error: not found: type int
def avancer(a:int) {
              ^